hotel-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
      - name: hotel
        image: denis227/hotel:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-srv
spec:
  type: LoadBalancer
  selector:
    app: hotel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
