hotel-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-np-srv
spec:
  type: NodePort
  selector:
    app: hotelapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30141
